# CLiAni

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: cliview.h  cocktailmenu.h  widdershins.h
include/model/: framedef.h  greasemonkey.h  noisedef.h
include/model/flavour/: cellular.h  flavour.h  perlinnoise.h  voronoi.h
include/model/scene/: cubescene.h  scene.h
include/old/: engine.h
include/utilz/: cyclicptr.h  global.h  humath.h  hutime.h  raytracer.h
include/view/: cliview.h
src/: cliview.cpp  decidecation.cpp  main.cpp  menuskins.cpp  widdershins.cpp
src/model/: greasemonkey.cpp  main.cpp  noiseattribute.cpp
src/model/flavour/: cellular.cpp  flavour.cpp  perlinnoise.cpp  voronoi.cpp
src/model/scene/: cubescene.cpp
src/old/: noise.cpp  noisedef.cpp
src/utilz/: humath.cpp  raytracer.cpp
src/view/: cliview.cpp  decidecation.cpp  main.cpp  menuskins.cpp
test/model/: greasemonkeytest.cpp
test/utilz/: humathtest.cpp
test/view/: cliviewtest.cpp
